fix(core): fix broken internal imports and css selectors

--- a/projects/elements/src/accordion/accordion.css
+++ b/projects/elements/src/accordion/accordion.css
@@ -61,3 +61,7 @@
 :host([disabled]) ::slotted(nve-accordion-header) {
   --cursor: not-allowed;
 }
+
+#header:hover nve-icon-button {
+  --color: var(--nve-sys-text-emphasis-color);
+}
